--- a/_posts/2017-05-20-avyld.md
+++ b/_posts/2017-05-20-avyld.md
@@ -3,4 +3,7 @@ layout: post
 title: Australia-Vietnam Young Leadership Dialogue (AVYLD)
 ---
 
-TODO: Write up a reflection of the AVYLD.
+Website: http://www.australiavietnam.org/
+
+This was a pretty awesome event and amazingly organised. I will write up more
+for this event in the future. So much to write and to reflect on.
